platform/headlamp-cloud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: headlamp
spec:
  ingressClassName: traefik
  rules:
    - host: app.cloud.k8s.lab
      http:
        paths:
          - path: /headlamp
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
