platform/jenkins-cloud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: ci
spec:
  ingressClassName: traefik
  tls:
    - hosts: [jenkins.cloud.k8s.lab]
      secretName: jenkins-cloud-tls
  rules:
    - host: jenkins.cloud.k8s.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
